2010-06-14  Roman Bovsunivkiy <a2k0001@gmail.com>

	* FWBSettings.cpp (FWBSettings::init): fixed #1504 Added (optional)
	text to the toolbar buttons. Text is turned on by default but
	can be turned off in the global Preferences dialog.

	* Preferences.cpp: fixed #1505 move "Clip comments in rules"
	checkbox to "Appearance" tab.

2010-06-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* release_notes_4.0.2.html: Added release notes for v4.0.2 to
	the package. fixes #1515

	* IPTImporter.cpp (IPTImporter::pushPolicyRule): fixed SF bug
	3015641 "imported REJECT rule changed during compile". Importer of
	iptables rules did not handle properly parameters of the REJECT
	target.

2010-06-12  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (IPTImporter::pushPolicyRule): fixed #1516
	policy importer for iptables should not use automatic ESTABLISHED
	rule. (See also SF bug 3012953).  Policy importer for iptables
	always creates explicit rule to match ESTABLISHED,RELATED to make
	sure it goes into the same chain as the original rule. Also in the
	same fix, importer creates branch for iptables rules that match
	both regular service and state ESTABLISHED,RELATED. The service is
	matched in the main policy rule set, while ESTABLISHED,RELATED
	state is matched in the branch.

	* GroupObjectDialog.h (class GroupObjectDialog): fixed #1499
	"GroupObjectDialogTest.cpp does not compile with gcc 3.4.6" and SF
	bug 3015307.  There is no reason to make method insertObject()
	protected which caused problems (and hacky workaround) in the unit
	test.

	* IPTImporter.cpp (IPTImporter::finalize): fixed SF bug #3015305
	"compile error XML validity ". The problem was introduced with a
	change that made policy importer cabaple of reproducing default
	policies of main chains.

2010-06-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* fixed SF bug #3013743 "UI build warnings"

	* longtextdialog_q.ui, objconflictresolutiondialog_q.ui: fixed