@@ -162,9 +162,34 @@ void FWBSettings::init()
         } else
         {
             qsrand(time(NULL));
-            uuid_settings->setValue(appGUID, QUuid::createUuid().toString() );
+            uuid_settings->setValue(appGUID, QUuid::createUuid().toString());
         }
     }
+
+    /*
+     * I am seeing two particular uuids a lot in the logs, both coming
+     * from thousands of different instances all over the world. I
+     * have no idea why so many different systems assigned themselves
+     * the same uuid which is supposed to be random and
+     * unique. Apparently QUuid::createUuid() returns predictable uuid
+     * in some cases.  Versions of the program before 4.0.2 did not
+     * call qsrand() to re-seed random generator because Qt
+     * documentation says that createUuid() does that. Interestingly,
+     * if I run google search for the first of the two uuids, I get
+     * some results which means exactly the same uuid was generated by
+     * an unrelated program in some completely unrelated case.
+     * Anyway, I am going to "flush" these two repeatable uuids to
+     * reduce systematic error in counting how many instances of
+     * fwbuilder are running out there.
+     */
+    QString my_uuid = getAppGUID();
+    if (my_uuid == "b7203c47-06bf-4878-9ff5-6afffb2db546" ||
+        my_uuid == "46759a87-7956-431f-a171-ccb754ef239e")
+    {
+        qsrand(time(NULL));
+        uuid_settings->setValue(appGUID, QUuid::createUuid().toString());
+    }
+
 
     // By default sort RCS File preview by date, which is column 1
     ok = contains(rcsFilePreviewSortColumn);
